# codescope

./: .gitignore  LICENSE  README.md  pyproject.toml
src/codescope/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  file_hashes.py  global_config.py  indexer.py  mcp_server.py  search.py  session.py  store.py
